--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,11 @@ dependencies:
   # Date/Time Formatting
   intl: ^0.18.1
   
-  # Simple Storage
+  # Local Notifications
+  flutter_local_notifications: ^17.0.0
+  timezone: ^0.9.2
+  
+  # Simple Storage & Settings
   shared_preferences: ^2.2.2
 
 dev_dependencies:
