--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   flutter_local_notifications: ^17.0.0
   timezone: ^0.9.2
   
+  # Background Tasks
+  workmanager: ^0.9.0
+  
   # Simple Storage & Settings
   shared_preferences: ^2.2.2
   
