--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,9 @@ dependencies:
   
   # URL Launcher
   url_launcher: ^6.2.1
+  
+  # File Picker for database import
+  file_picker: ^8.0.0+1
 
 dev_dependencies:
   flutter_test:
